--- a/style.css
+++ b/style.css
@@ -46,6 +46,12 @@ a:hover{
         padding: 8px 16px;
         border: none;
     }
+    button:hover{
+        background-color: #fff;
+        color:var(--green);
+        border: solid 1px var(--green);
+    }
+    
 }
 main{
     height: 100vh;
